@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-09-19T00:59:44Z",
-  "count_outdated" : 571,
-  "uniques_outdated" : 397,
+  "timestamp" : "2025-09-20T00:56:21Z",
+  "count_outdated" : 572,
+  "uniques_outdated" : 398,
   "count" : 574,
   "uniques" : 400,
   "clones" : [
-    {
-      "timestamp": "2025-09-05T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-09-07T00:00:00Z",
       "count": 1,
