@@ -1,3 +1,12 @@
+2025-09-20T00:56:21Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17873092603 # 772
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-20
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 397 571 / 400 574
+* notice: next accum: outdated-unq outdated-all / unq all: 398 572 / 400 574
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-09-05] / []
+
 2025-09-19T00:59:44Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17845336352 # 771
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-19
